fix page layout problems

--- a/style.css
+++ b/style.css
@@ -194,9 +194,10 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 220px 220px 220px;
-    gap: 25px;
+    gap: 55px;
     margin-top: 40px;
     margin-left: 20px;
+    margin-bottom: 50px;
 }
 
 .card {
@@ -313,7 +314,7 @@ a {
 }
 
 .trending {
-    margin-top: 55px;
+    margin-top: 155px;
     font-size: 20px;
     font-weight: 500;
 }
@@ -329,7 +330,7 @@ a {
     grid-template-rows: 80px 80px 80px 80px;
     height: 320px;
     overflow: hidden;
-    margin-top: 20px;
+    margin-top: 117px;
 }
 
 .user-trending {
